<resources>
    <string name="app_name">MUSIC HELPER</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="header_text">Welcome to</string>
    <string name="music_helper">MUSIC HELPER</string>
    <string name="send">Send</string>
    <string name="enter_song_name">ENTER SONG NAME</string>
    <string name="yswaotdjd">Your song will appear on the DJ\'s device</string>
    <string name="delete">Delete</string>
    <string name="song_name">Song Name</string>
    <string name="songs">SONGS:</string>
    <string name="logomusichelper">LogoMUSICHELPER</string>
</resources>